
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct cmt_fmt_map {char* user_format; scalar_t__ is_alias; int name; } ;


 struct cmt_fmt_map* commit_formats ;
 int commit_formats_len ;
 int die (char*,char const*) ;
 int starts_with (int ,char const*) ;
 size_t strlen (int ) ;

__attribute__((used)) static struct cmt_fmt_map *find_commit_format_recursive(const char *sought,
       const char *original,
       int num_redirections)
{
 struct cmt_fmt_map *found = ((void*)0);
 size_t found_match_len = 0;
 int i;

 if (num_redirections >= commit_formats_len)
  die("invalid --pretty format: "
      "'%s' references an alias which points to itself",
      original);

 for (i = 0; i < commit_formats_len; i++) {
  size_t match_len;

  if (!starts_with(commit_formats[i].name, sought))
   continue;

  match_len = strlen(commit_formats[i].name);
  if (found == ((void*)0) || found_match_len > match_len) {
   found = &commit_formats[i];
   found_match_len = match_len;
  }
 }

 if (found && found->is_alias) {
  found = find_commit_format_recursive(found->user_format,
           original,
           num_redirections+1);
 }

 return found;
}
